@@ -161,7 +161,7 @@
 
 <addon id="plugin.video.ZemTV-shani"
        name="ZemTV.com"
-       version="4.3.6"
+       version="4.3.7"
        provider-name="shani">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
