@@ -404,7 +404,7 @@ def AddSports(url):
     addDir('Willow.Tv (login required)' ,base64.b64decode('aHR0cDovL3d3dy53aWxsb3cudHYv') ,19,'')
     addDir(base64.b64decode('U3VwZXIgU3BvcnRz') ,'sss',34,'')
     addDir('PV2 Sports' ,'sports',36,'')
-    addDir('Streams' ,'sss',39,'')
+#    addDir('Streams' ,'sss',39,'')
     addDir('cricfree.sx' ,'sss',41,'')
 
     
