@@ -1,3 +1,5 @@
+[B]Version 4.3.7[/B]
+    Added sport365, removed streams till we fix it properly
 [B]Version 4.3.6[/B]
     Ipbox Improved still in beta
 [B]Version 4.3.5[/B]
